Add GraphQL relay configuration with a sample Relay container and Sample Schema

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-graphql": "^0.6.12",
     "express-jwt": "^5.3.1",
     "graphql": "^0.13.2",
+    "graphql-relay": "^0.5.5",
     "history": "^4.7.2",
     "isomorphic-style-loader": "^4.0.0",
     "jsonwebtoken": "^8.3.0",
